--- a/admin/edit_problems/edit_problems.html
+++ b/admin/edit_problems/edit_problems.html
@@ -5,6 +5,7 @@
   <title>문제 수정</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../../config.js"></script>
   <link rel="stylesheet" href="../admin_assets/css/edit_problems.css">
   <link rel="stylesheet" href="../../assets/css/style.css">
 
@@ -36,7 +37,7 @@
       function refreshAndRetry(cb) {
         if (!refreshToken) return rejectAccess();
         $.ajax({
-          url: 'https://be.netlab.kr/api/auth/refresh',
+          url: window.API_BASE_URL + '/auth/refresh',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ refreshToken }),
@@ -62,7 +63,7 @@
           delete json.id;
           function doEdit(token2, retry) {
             $.ajax({
-              url: `https://be.netlab.kr/api/admin/problems/${id}`,
+              url: `${window.API_BASE_URL}/admin/problems/${id}`,
               method: 'PUT',
               contentType: 'application/json',
               data: JSON.stringify(json),
@@ -92,7 +93,7 @@
 
       function checkAdminAndInit(token) {
         $.ajax({
-          url: "https://be.netlab.kr/api/auth/is-admin",
+          url: window.API_BASE_URL + "/auth/is-admin",
           method: "GET",
           headers: { "Authorization": "Bearer " + token },
           success: function (isAdmin) {
