--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/index.css">
+  <script src="config.js"></script>
   <script src="PUBLIC/JS/navbarAndToken.js"></script>
 </head>
 <body class="has-navbar">
