--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../config.js"></script>
 
   <!-- 1) 전역(네비바 등) 먼저 -->
   <link rel="stylesheet" href="../assets/css/style.css">
@@ -66,7 +67,7 @@
       }
       function checkAdminAndRender(token) {
         $.ajax({
-          url: "https://be.netlab.kr/api/auth/is-admin",
+          url: window.API_BASE_URL + "/auth/is-admin",
           method: "GET",
           headers: { "Authorization": "Bearer " + token },
           success: function (isAdmin) { isAdmin ? renderNav() : rejectAccess(); },
@@ -77,7 +78,7 @@
         checkAdminAndRender(accessToken);
       } else if (refreshToken) {
         $.ajax({
-          url: 'https://be.netlab.kr/api/auth/refresh',
+          url: window.API_BASE_URL + '/auth/refresh',
           method: 'POST',
           contentType: 'application/json',
           data: JSON.stringify({ refreshToken }),
@@ -98,7 +99,7 @@
         alert('로그아웃 되었습니다');
         location.href = '/index.html';
       });
-    });
+    }); 
   </script>
 </body>
 </html>
