--- a/login/signUp.html
+++ b/login/signUp.html
@@ -5,6 +5,7 @@
   <title>NetLab 회원가입</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../config.js"></script>
   <link rel="stylesheet" href="../assets/css/signUp.css">
   <script src="../PUBLIC/JS/navbarAndToken.js"></script> 
   <link rel="stylesheet" href="../assets/css/style.css">
@@ -48,7 +49,7 @@
         };
   
         $.ajax({
-          url: 'https://be.netlab.kr/api/auth/signup',
+          url: window.API_BASE_URL + '/auth/signup',
           type: 'POST',
           contentType: 'application/json',
           data: JSON.stringify(payload),
