--- a/login/signUp.html
+++ b/login/signUp.html
@@ -24,7 +24,7 @@
         <input type="text" id="userId" placeholder="아이디" required>
         <input type="password" id="password" placeholder="비밀번호" required>
         <input type="password" id="password2" placeholder="비밀번호 확인" required>
-        <input type="email" id="email" placeholder="이메일" required>
+        <input type="email" 1 placeholder="이메일" required>
         <input type="text" id="name" placeholder="닉네임" required>
         <button type="submit">가입하기</button>
       </form>
