--- a/admin/add_problems/add_problems.html
+++ b/admin/add_problems/add_problems.html
@@ -152,7 +152,7 @@
         "description": "PC 2대에 각각 IP 주소를 설정하세요. PC1은 192.168.1.2, PC2는 192.168.1.3이어야 합니다.",
         "difficulty": "EASY",
         "tags": "ip,pc",
-        "flag": "Sunrin{NetWorkTest}"
+        "flag": "NL{NetWorkTest}"
       };
       $('#problemJson').val(JSON.stringify(exampleJson, null, 2));
     });
