--- a/profile/profile.html
+++ b/profile/profile.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <link rel="stylesheet" href="../assets/css/profile.css">
-  <script src="PUBLIC/JS/navbarAndToken.js"></script>
+  <script src="../PUBLIC/JS/navbarAndToken.js"></script>
 </head>
 
 <body>
