--- a/profile/profile.html
+++ b/profile/profile.html
@@ -8,17 +8,17 @@
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <link rel="stylesheet" href="../assets/css/profile.css">
   <script src="../PUBLIC/JS/navbarAndToken.js"></script>
-
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
   <template id="activity-item-temp">
-    <div class="activity-item" id="activity-item">
+    <div class="activity-item">
       <span class="activity-title" id="activity-title">TCP 3-Way Handshake 문제 해결</span>
       <span class="activity-date" id="activity-date">2일 전</span>
     </div>
   </template>
+
   <!-- 네비바 -->
   <div class="navbar">
     <a class="brand" href="/index.html">NetLab</a>
@@ -38,8 +38,8 @@
         <div class="profile-moto" id="profile-moto">chulsoo.kim@example.com</div>
         <div class="profile-stats">
           <div class="stat-item">
-            <div class="stat-label" id="solved-problem">해결한 문제</div>
-            <div class="stat-value">24</div>
+            <div class="stat-label">해결한 문제</div>
+            <div class="stat-value" id="solved-problem">24</div>
           </div>
           <div class="stat-item">
             <div class="stat-label">티어 포인트</div>
@@ -48,8 +48,7 @@
           <div class="stat-item">
             <div class="stat-label">티어</div>
             <div class="inliner">
-              <div class="stat-value" id="tier-name">1,250</div>
-
+              <div class="stat-value" id="tier-name">Diamond</div>
               <img src="../assets/Diamond.png" alt="tier_image" id="tier-image">
             </div>
           </div>
@@ -67,11 +66,11 @@
         </div>
         <div class="info-row">
           <span class="info-label">현재 티어</span>
-          <span class="info-value" id="info-tiername">chulsoo.kim@example.com</span>
+          <span class="info-value" id="info-tiername">Diamond</span>
         </div>
         <div class="info-row">
           <span class="info-label">승급까지</span>
-          <span class="info-value" id="info-tierremain">2024.03.15</span>
+          <span class="info-value" id="info-tierremain">50p</span>
         </div>
       </div>
 
@@ -87,109 +86,117 @@
         </div>
         <div class="info-row">
           <span class="info-label">소개글</span>
-          <span class="info-value" id="user-intro">18xp / 200xp</span>
+          <span class="info-value" id="user-intro">네트워크 공부 중입니다</span>
         </div>
 
         <div style="margin-top: 20px;">
-          <button class="btn btn-secondary" style="width: 100%;" id="edit-btn" onclick="alert('준비 중입니다')">프로필
-            수정</button>
+          <button class="btn btn-secondary" style="width: 100%;" id="edit-btn">프로필 수정</button>
         </div>
       </div>
     </div>
 
     <!-- 최근 활동 -->
-    <div class="activity-list">
+    <div class="activity-list" id="activity-list">
       <h2>최근 활동</h2>
     </div>
   </div>
 
-
-  <script>
-    import tier_points from '../tier_config.js ';
+  <script type="module">
+    import tier_points from '../tier_config.js';
 
     function get_solved(array) {
-      const total = array.length;
-      let solved = 0;
+      if (!array || array.length === 0) return 0;
 
+      let solved = 0;
       array.forEach(element => {
         if (element.isCorrect) {
           solved++;
         }
       });
+      return solved;
+    }
 
-      return solved
+    function get_correct_rate(array) {
+      if (!array || array.length === 0) return 0;
+      const solved = get_solved(array);
+      return Math.round((solved / array.length) * 100);
     }
 
     function render_userProfile(info) {
       const solved_cnt = get_solved(info.submissions);
-      const tier_image = document.getElementById("tier-image");
+      const correct_rate = get_correct_rate(info.submissions);
 
-      tier_image.src = tier_points[info.tier].image;
+      // 티어 이미지
+      if (tier_points[info.tier]) {
+        const tier_image = document.getElementById("tier-image");
+        tier_image.src = tier_points[info.tier].image;
+      }
 
+      // 페이지 타이틀
       document.title = `내 정보 - ${info.name}`;
 
-      const profile_name = document.getElementById('profile-name');
-      profile_name.textContent = info.name;
+      // 프로필 정보
+      document.getElementById('profile-name').textContent = info.name;
+      document.getElementById('profile-avatar').textContent = info.name[0].toUpperCase();
+      document.getElementById('profile-moto').textContent = info.intro || info.email;
 
-      const profile_avatar = document.getElementById('profile-avatar');
-      profile_avatar.textContent = info.name[0].toUpperCase();
+      // 통계
+      document.getElementById("solved-problem").textContent = solved_cnt;
+      document.getElementById("tier-point").textContent = info.tierPoint;
+      document.getElementById("tier-name").textContent = info.tier;
 
-      const profile_moto = document.getElementById('profile-moto');
-      profile_moto.textContent = info.intro;
+      // 티어 정보 카드
+      document.getElementById("info-username").textContent = info.name;
+      document.getElementById("info-tiername").textContent = info.tier;
 
-      const solved_problem = document.getElementById("solved-problem");
-      solved_problem.textContent = solved_cnt;
+      if (tier_points[info.tier]) {
+        const current_newtier_start = tier_points[info.tier].end + 1;
+        document.getElementById("info-tierremain").textContent = `${current_newtier_start - info.tierPoint}p`;
+      }
 
-      const tier_point = document.getElementById("tier-point");
-      tier_point.textContent = info.tierPoint;
+      // 추가 정보
+      document.getElementById("total-solved").textContent = `${solved_cnt}/${info.submissions.length}`;
+      document.getElementById("correct-rate").textContent = `${correct_rate}%`;
+      document.getElementById("user-intro").textContent = info.intro || '소개글이 없습니다';
 
-      const tier_name = document.getElementById("tier-name");
-      tier_name.textContent = info.tier;
-
-      const info_username = document.getElementById("info-username");
-      info_username.textContent = info.name;
-
-      const info_tiername = document.getElementById("info-tiername");
-      info_tiername.textContent = info.tier;
-
-      const info_tierremain = document.getElementById("info-tierremain");
-      const current_newtier_start = tier_points[info.tier].end + 1;
-      info_tiername.textContent = `${current_newtier_start - info.tierPoint}p`;
-
-      const total_solved = document.getElementById("total-solved");
-      total_solved.textContent = `${solved_cnt}/${info.submissions.length}`;
-
-      const user_intro = document.getElementById("user-intro");
-      user_intro.textContent = info.intro;
-
-      const activity_list = document.getElementById("activity-list");
+      // 최근 활동
+      const activity_list = document.querySelector(".activity-list");
       const activity_template = document.getElementById("activity-item-temp");
-      info.submissions.forEach(element => {
-        const clone_node = document.importNode(activity_template.content, true);
-        clone_node.getElementById("activity-title").textContent = `${element.problemTitle} 해결`;
-        clone_node.getElementById("activity-date").textContent = element.submittedAt;
-        activity_list.appendChild(clone_node);
-      });
+
+      if (info.submissions && info.submissions.length > 0) {
+        info.submissions.forEach(element => {
+          const clone_node = document.importNode(activity_template.content, true);
+          clone_node.querySelector(".activity-title").textContent = `${element.problemTitle} ${element.isCorrect ? '해결' : '시도'}`;
+          clone_node.querySelector(".activity-date").textContent = element.submittedAt;
+          activity_list.appendChild(clone_node);
+        });
+      }
     }
 
-    addEventListener("DOMContentLoaded", (event) => {
+    document.addEventListener("DOMContentLoaded", () => {
       const API_URL = window.API_BASE_URL + '/mypage';
-      const USER_DETAIL_API = user => { return }
-
       const at = localStorage.getItem('token');
-      const headers = at ? { 'Authorization': 'Bearer' + at } : {};
+      const headers = at ? { 'Authorization': 'Bearer ' + at } : {};
 
-      // 초기 유저 정보 로드
+      // 유저 정보 로드
       $.ajax({
-        url: PROBLEM_DETAIL_API(id),
+        url: API_URL,
         method: 'GET',
         headers: headers,
         success: function (res) {
           render_userProfile(res);
+        },
+        error: function (xhr, status, error) {
+          console.error('프로필 로드 실패:', error);
+          alert('프로필 정보를 불러오는데 실패했습니다.');
         }
       });
 
+      // 프로필 수정 버튼
       const edit_btn = document.getElementById("edit-btn");
+      edit_btn.addEventListener('click', () => {
+        alert('준비 중입니다');
+      });
     });
   </script>
 
