--- a/profile/profile.html
+++ b/profile/profile.html
@@ -184,6 +184,7 @@
         method: 'GET',
         headers: headers,
         success: function (res) {
+          console.log(res)
           render_userProfile(res);
         },
         error: function (xhr, status, error) {
