--- a/profile/profile.html
+++ b/profile/profile.html
@@ -179,7 +179,7 @@
 
       // 유저 정보 로드
       $.ajax({
-        url:  window.API_BASE_URL + "/mypage",
+        url:  "https://be.netlab.kr/api/mypage",
         method: 'GET',
         headers: headers,
         success: function (res) {
