--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../assets/css/profile.css">
   <!-- jQuery를 먼저 로드 -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../config.js"></script>
   <!-- 그 다음에 navbarAndToken.js 로드 -->
   <script src="../PUBLIC/JS/navbarAndToken.js"></script>
 </head>
