--- a/profile/profile.html
+++ b/profile/profile.html
@@ -12,6 +12,7 @@
   <script src="../config.js"></script>
   <!-- 그 다음에 navbarAndToken.js 로드 -->
   <script src="../PUBLIC/JS/navbarAndToken.js"></script>
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
