--- a/profile/profile.html
+++ b/profile/profile.html
@@ -36,24 +36,24 @@
   <div class="main-content">
     <!-- 프로필 헤더 -->
     <div class="profile-header">
-      <div class="profile-avatar" id="profile-avatar">김</div>
+      <div class="profile-avatar" id="profile-avatar"></div>
       <div class="profile-info">
-        <div class="profile-name" id="profile-name">김철수</div>
-        <div class="profile-moto" id="profile-moto">chulsoo.kim@example.com</div>
+        <div class="profile-name" id="profile-name"></div>
+        <div class="profile-moto" id="profile-moto"></div>
         <div class="profile-stats">
           <div class="stat-item">
             <div class="stat-label">해결한 문제</div>
-            <div class="stat-value" id="solved-problem">24</div>
+            <div class="stat-value" id="solved-problem"></div>
           </div>
           <div class="stat-item">
             <div class="stat-label">티어 포인트</div>
-            <div class="stat-value" id="tier-point">15</div>
+            <div class="stat-value" id="tier-point"></div>
           </div>
           <div class="stat-item">
             <div class="stat-label">티어</div>
             <div class="inliner">
-              <div class="stat-value" id="tier-name">Diamond</div>
-              <img src="../assets/Diamond.png" alt="tier_image" id="tier-image">
+              <div class="stat-value" id="tier-name"></div>
+              <img src="" alt="tier_image" id="tier-image">
             </div>
           </div>
         </div>
