--- a/profile/profile.html
+++ b/profile/profile.html
@@ -53,7 +53,7 @@
             <div class="stat-label">티어</div>
             <div class="inliner">
               <div class="stat-value" id="tier-name"></div>
-              <img src="" alt="tier_image" id="tier-image">
+              <img src="" id="tier-image">
             </div>
           </div>
         </div>
