--- a/profile/profile.html
+++ b/profile/profile.html
@@ -66,31 +66,31 @@
         <h2>티어</h2>
         <div class="info-row">
           <span class="info-label">닉네임</span>
-          <span class="info-value" id="info-username">김철수</span>
+          <span class="info-value" id="info-username"></span>
         </div>
         <div class="info-row">
           <span class="info-label">현재 티어</span>
-          <span class="info-value" id="info-tiername">Diamond</span>
+          <span class="info-value" id="info-tiername"></span>
         </div>
         <div class="info-row">
           <span class="info-label">승급까지</span>
-          <span class="info-value" id="info-tierremain">50p</span>
+          <span class="info-value" id="info-tierremain"></span>
         </div>
       </div>
 
       <div class="info-card">
         <h2>추가 정보</h2>
         <div class="info-row">
-          <span class="info-label">총 문제 풀이</span>
-          <span class="info-value" id="total-solved">24 / 50</span>
+          <span class="info-label">맞은 문제/푼 문제</span>
+          <span class="info-value" id="total-solved">맞은</span>
         </div>
         <div class="info-row">
           <span class="info-label">정답률</span>
-          <span class="info-value" id="correct-rate">82%</span>
+          <span class="info-value" id="correct-rate"></span>
         </div>
         <div class="info-row">
           <span class="info-label">소개글</span>
-          <span class="info-value" id="user-intro">네트워크 공부 중입니다</span>
+          <span class="info-value" id="user-intro"></span>
         </div>
 
         <div style="margin-top: 20px;">
